log/build_2025-05-27_18-55-43/my_robot_pkg/stderr.log
  File "/home/futill/targer_ws/install/my_robot_pkg/lib/python3.10/site-packages/my_robot_pkg/gui.py", line 1
    ```python
    ^
SyntaxError: invalid syntax

